# iroh-tauri-app

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
crates/iroh-social-types/: Cargo.toml
crates/iroh-social-types/src/: dm.rs  lib.rs  protocol.rs  signing.rs  types.rs  validation.rs
scripts/: pre-commit
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/migrations/: 001_initial.sql  001_profiles.sql  002_avatar_ticket.sql  002_follows.sql  003_direct_messages.sql  003_posts.sql  004_interactions.sql  004_outbox_message_id.sql  005_interactions.sql  006_post_replies.sql  007_signatures.sql  008_mentions.sql  009_mute_block.sql  009_notifications.sql  010_quote_posts.sql  011_mentions.sql  012_private_profile.sql
src-tauri/src/: constants.rs  crypto.rs  dm.rs  gossip.rs  lib.rs  main.rs  setup.rs  state.rs  storage.rs  sync.rs
src-tauri/src/commands/: blobs.rs  dm.rs  interactions.rs  mod.rs  moderation.rs  notifications.rs  posts.rs  profile.rs  social.rs  sync.rs
src-tauri/src/storage/: crypto.rs  interactions.rs  messaging.rs  mod.rs  moderation.rs  notifications.rs  posts.rs  profiles.rs  social.rs
src/lib/: Avatar.svelte  BottomNav.svelte  Icon.svelte  Lightbox.svelte  MediaGrid.svelte  MentionAutocomplete.svelte  MobileHeader.svelte  PostActions.svelte  PostCard.svelte  QrModal.svelte  QuoteComposer.svelte  QuotedPostEmbed.svelte  ReplyComposer.svelte  ReplyContextBlock.svelte  ScannerModal.svelte  Sidebar.svelte  Timeago.svelte  blobs.ts  haptics.ts  name.svelte.ts  types.ts  utils.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/activity/: +page.svelte
src/routes/bookmarks/: +page.svelte
src/routes/follows/: +page.svelte
src/routes/messages/: +page.svelte
src/routes/messages/[pubkey]/: +page.svelte
src/routes/post/[id]/: +page.svelte
src/routes/profile/: +page.svelte
src/routes/profile/[pubkey]/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/user/[pubkey]/: +page.svelte
src/routes/welcome/: +page.svelte
todos/: community-server.md  direct-messaging.md  ideas.md  likes-replies-reposts.md  linked-devices.md  message-boards.md  post-sync.md  voice-video-calling.md
