[package]
name = "iroh-tauri-app"
version.workspace = true
description = "A Tauri App"
authors = ["you"]
edition.workspace = true

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "iroh_tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = { workspace = true }
bytes = "1"
futures-lite = "2"
getrandom = "0.4.1"
iroh = "0.96"
iroh-blobs = { version = "0.98", features = ["fs-store"] }
iroh-gossip = { workspace = true }
iroh-social-types = { path = "../crates/iroh-social-types" }
rand = "0.8"
rusqlite = { version = "0.33", features = ["bundled"] }
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tokio = { version = "1", features = ["full"] }
